fix: dark mode on prose links

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -15,7 +15,7 @@ a:hover {
   @apply bg-neutral-950 !text-white decoration-neutral-950;
 }
 body:has(#dark:checked) a:hover {
-  @apply bg-white text-black decoration-white;
+  @apply bg-white !text-black decoration-white;
 }
 a.exception {
   @apply leading-none underline-offset-2 transition-all duration-150 ease-in-out;
